--- a/app/code/GateSoftware/GateGallery/view/adminhtml/templates/show.phtml
+++ b/app/code/GateSoftware/GateGallery/view/adminhtml/templates/show.phtml
@@ -68,6 +68,10 @@ $gallery = $block->getGalleryData();
                         <?php foreach ($block->getImagesByGalleryId() as $image): ?>
                             <div class="file-uploader file-uploader-summary">
                                 <div class="file-uploader-preview">
+                                    <label class="check-container" title=<?php  echo __('Visibility of image') ?>>
+                                        <input type="checkbox" <?php if($image['visibility']) echo 'checked'; ?> disabled >
+                                        <span class="checkmark"></span>
+                                    </label>
                                     <a class="preview-link preview-image" target="_blank"
                                        href="<?php echo sprintf("%s%s", $block->getMediaBaseUrl(), $image['path']) ?>">
                                         <img
@@ -85,52 +89,3 @@ $gallery = $block->getGalleryData();
 <?php else: ?>
     <div style="text-align: center">Gallery not found.</div>
 <?php endif; ?>
-
-
-<style>
-    a.button {
-        text-decoration: none;
-        font-size: 1.6rem;
-        letter-spacing: .025em;
-        display: inline-block;
-        font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        font-weight: 600;
-        line-height: 1.36;
-        padding: 0.9rem 1em 0.9rem;
-        text-align: center;
-        vertical-align: baseline;
-    }
-
-    a.primary {
-        background-color: #eb5202;
-        border-color: #eb5202;
-        color: #ffffff;
-        text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.25);
-        border: 1px solid;
-        border-radius: 0;
-    }
-
-    a.primary:hover {
-        background-color: #ba4000;
-        border-color: #b84002;
-        box-shadow: 0 0 0 1px #007bdb;
-        color: #ffffff;
-    }
-
-    a.button.secondary {
-        color: #41362f;
-    }
-
-    a.button.secondary::before {
-        content: '\e626';
-        margin-right: .5em;
-        position: relative;
-        top: 1px;
-        -webkit-font-smoothing: antialiased;
-        font-family: 'Admin Icons';
-        font-style: normal;
-        font-weight: normal;
-        line-height: 1;
-        speak: none;
-    }
-</style>
