--- a/app/code/GateSoftware/GateGallery/view/adminhtml/layout/gallery_gallery_edit.xml
+++ b/app/code/GateSoftware/GateGallery/view/adminhtml/layout/gallery_gallery_edit.xml
@@ -2,7 +2,8 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="GateSoftware_GateGallery::css/checkbox.css" rel="stylesheet" type="text/css" />    </head>
+        <css src="GateSoftware_GateGallery::css/checkbox.css" rel="stylesheet" type="text/css"/>
+    </head>
     <body>
         <referenceContainer name="content">
             <uiComponent name="gategallery_gallery_edit"/>
